[package]
name = "Float"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
image = "*"
serde_json = "*"
lazy_static = "*"
hex_color = "*"


#Release build will take a g e s to to compile, but will work magic in s p e e d!
[profile.release]
opt-level = 3
lto = true
codegen-units = 1