[package]
name = "Float"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colog = "1.3.0"
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.21"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
serde = {version = "*",features = ["derive"]}
toml = "*"


## BELOW CODE STOLEN FROM BEVY DOCS, REALLY GOOD FOR A GAME ENGINE LIKE THINGY IM MAKING
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. this), but not for our code:
[profile.dev.package."*"]
opt-level = 3
## OK CODE IS NO LONGER STOLEN :3